<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_concatenate</name>
  <version>0.0.0</version>
  <description>
    A node which can be used to concatenate up to 4 pointclouds and output the 
    concatenated pointcloud on a single topic.
  </description>

  <maintainer email="albertsseligmann@gmail.com">Albert Seligmann</maintainer>

  <license>BSD</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- build_depend: dependencies only used in source files -->
  <build_depend>boost</build_depend>
  <!-- depend: build, export, and execution dependency -->
  <depend>roscpp</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>rviz</depend>

</package>
